objects/MDR__c.object
<CustomObject>
    <fields>
        <fullName>SVC_COU_L__c</fullName>
        <label>Student Services - Counseling Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVC_COU__c</fullName>
        <label>SVC_COU</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVC_DAY_L__c</fullName>
        <label>Student Services - Daycare Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVC_DAY__c</fullName>
        <label>SVC_DAY</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVC_EMP_L__c</fullName>
        <label>Student Services - Employment Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVC_EMP__c</fullName>
        <label>SVC_EMP</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVC_PLAC_L__c</fullName>
        <label>Student Services - Placement Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVC_PLAC__c</fullName>
        <label>SVC_PLAC</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVC_REM_L__c</fullName>
        <label>Student Services - Remedial Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVC_REM__c</fullName>
        <label>SVC_REM</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Class__c</fullName>
        <description>Classification of the School</description>
        <label>School Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>K-12</fullName>
                </value>
                <value>
                    <fullName>K-6</fullName>
                </value>
                <value>
                    <fullName>K-8</fullName>
                </value>
                <value>
                    <fullName>7-9</fullName>
                </value>
                <value>
                    <fullName>7-12</fullName>
                </value>
                <value>
                    <fullName>9-12</fullName>
                </value>
                <value>
                    <fullName>10-12</fullName>
                </value>
                <value>
                    <fullName>Career/Tech Ed</fullName>
                </value>
                <value>
                    <fullName>Spec Ed</fullName>
                </value>
                <value>
                    <fullName>Adult Ed</fullName>
                </value>
                <value>
                    <fullName>PK/K</fullName>
                </value>
                <value>
                    <fullName>K-3</fullName>
                </value>
                <value>
                    <fullName>4-6</fullName>
                </value>
                <value>
                    <fullName>5-8</fullName>
                </value>
                <value>
                    <fullName>K-5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Type__c</fullName>
        <description>Type of School</description>
        <label>School Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Elementary</fullName>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>2 Year College (College Only)</fullName>
                </value>
                <value>
                    <fullName>4 Year College (College Only)</fullName>
                </value>
                <value>
                    <fullName>Career &amp; Trade (College Only)</fullName>
                </value>
                <value>
                    <fullName>Adult</fullName>
                </value>
                <value>
                    <fullName>Combined</fullName>
                </value>
                <value>
                    <fullName>Includes Graduate School (College Only)</fullName>
                </value>
                <value>
                    <fullName>JHS</fullName>
                </value>
                <value>
                    <fullName>Special</fullName>
                </value>
                <value>
                    <fullName>SHS</fullName>
                </value>
                <value>
                    <fullName>Career/Tech Ed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAG_PRG_L__c</fullName>
        <label>School Gifted and Talented Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAG_PRG__c</fullName>
        <label>TAG_PRG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECHSERV_L__c</fullName>
        <label>Technical Services Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECHSERV__c</fullName>
        <label>TECHSERV</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TITLE2__c</fullName>
        <label>Title 2 District Funds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TTL1CODE_L__c</fullName>
        <label>Title 1 per Student</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTL1CODE__c</fullName>
        <label>TTL1CODE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTL1PRG_L__c</fullName>
        <label>Title 1 Program</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTL1PRG__c</fullName>
        <label>TTL1PRG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTL1WHOLE__c</fullName>
        <label>Title 1 District Funds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UNIV_L__c</fullName>
        <label>MDR Universe Desc</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIV__c</fullName>
        <label>UNIV</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>MDR URL</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UTUITION__c</fullName>
        <label>UTUITION</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIRTUAL_SCHOOL_L__c</fullName>
        <label>Virtual School Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIRTUAL_SCHOOL__c</fullName>
        <label>VIRTUAL_SCHOOL</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEARROUND_L__c</fullName>
        <label>Year Rounds Indicator Desc</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YEARROUND__c</fullName>
        <label>YEARROUND</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIPMETRO_L__c</fullName>
        <label>Metro Status Desc</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIPMETRO__c</fullName>
        <label>ZIPMETRO</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txtParentPID__c</fullName>
        <label>txtParentPID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>MDR</label>
    <listViews>
        <fullName>MDR_All_in_Florida</fullName>
        <columns>NAME</columns>
        <columns>STATE_NAME__c</columns>
        <columns>FILETYPE_L__c</columns>
        <columns>INST_SPEC__c</columns>
        <columns>DIST_LEVEL__c</columns>
        <columns>SCHTYPE_L__c</columns>
        <columns>CHARTER_L__c</columns>
        <columns>TTL1PRG_L__c</columns>
        <columns>TTL1CODE__c</columns>
        <columns>TTL1CODE_L__c</columns>
        <columns>TITLE2__c</columns>
        <columns>DISTSIZE_L__c</columns>
        <columns>PID__c</columns>
        <columns>DUNS_NUM__c</columns>
        <columns>APSCH_L__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UNIV_L__c</field>
            <operation>notEqual</operation>
            <value>U.S. College Education</value>
        </filters>
        <filters>
            <field>UNIV_L__c</field>
            <operation>notEqual</operation>
            <value>U.S. Public Libraries</value>
        </filters>
        <filters>
            <field>INST_SPEC__c</field>
            <operation>equals</operation>
            <value>10</value>
        </filters>
        <label>MDR: All US District Level Building Recs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MDR_Grand_Prairie_TX</fullName>
        <columns>NAME</columns>
        <columns>MSTREET__c</columns>
        <columns>MCITY__c</columns>
        <columns>MSTATE__c</columns>
        <columns>MZIPCODE__c</columns>
        <columns>STATE_NAME__c</columns>
        <columns>ParentPID__c</columns>
        <columns>FILETYPE_L__c</columns>
        <columns>INST_SPEC__c</columns>
        <columns>DIST_LEVEL__c</columns>
        <columns>SCHTYPE_L__c</columns>
        <columns>CHARTER_L__c</columns>
        <columns>PID__c</columns>
        <columns>DUNS_NUM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UNIV_L__c</field>
            <operation>notEqual</operation>
            <value>U.S. College Education</value>
        </filters>
        <filters>
            <field>UNIV_L__c</field>
            <operation>notEqual</operation>
            <value>U.S. Public Libraries</value>
        </filters>
        <filters>
            <field>STATE_NAME__c</field>
            <operation>equals</operation>
            <value>Texas</value>
        </filters>
        <filters>
            <field>ParentPID__c</field>
            <operation>contains</operation>
            <value>GRAND PRAIRIE IND</value>
        </filters>
        <label>MDR: All Schools in District X</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MDR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>